--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -11,7 +11,7 @@ jobs:
           python-version: 3.6.15
       - name: Install dependencies
         run: |
-          make install-azure
+          make install_azure
       - name: Lint
         run: | 
           make lint
